--- a/ARI_CW2.ipynb
+++ b/ARI_CW2.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "ARI_CW2.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyOR9z5PTs2ktWVwAQDpKffi",
       "include_colab_link": true
     },
@@ -38,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "-JekhEn9JAlH"
       },
@@ -62,9 +63,9 @@
           "height": 386
         },
         "id": "BgphSM0bO6TR",
-        "outputId": "0f36c513-f49a-4551-c940-cd716a67aee1"
+        "outputId": "d0b133b5-a583-41c8-eb8c-2fbfa030ce86"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +110,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e183a5a8-9fe2-4569-9a00-5d5d0d28a544\">\n",
+              "  <div id=\"df-47be3b2a-f9aa-4e13-a61f-b77362c6129b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -277,7 +278,7 @@
               "</table>\n",
               "<p>5 rows × 23 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e183a5a8-9fe2-4569-9a00-5d5d0d28a544')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-47be3b2a-f9aa-4e13-a61f-b77362c6129b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -328,12 +329,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e183a5a8-9fe2-4569-9a00-5d5d0d28a544 button.colab-df-convert');\n",
+              "          document.querySelector('#df-47be3b2a-f9aa-4e13-a61f-b77362c6129b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e183a5a8-9fe2-4569-9a00-5d5d0d28a544');\n",
+              "          const element = document.querySelector('#df-47be3b2a-f9aa-4e13-a61f-b77362c6129b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -356,7 +357,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 2
         }
       ]
     },
@@ -372,7 +373,7 @@
         "id": "NX-2U2_VPXK_",
         "outputId": "55c488d5-c0ce-411c-de71-94b56710c749"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +426,7 @@
         "id": "6RqvUdYtPfJg",
         "outputId": "b2e162d5-25c3-4038-badf-2248a8e255d2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +810,7 @@
         "id": "xRrfLauK0ryZ",
         "outputId": "8dffa49d-a850-4259-fb41-5efba47bf015"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,7 +843,7 @@
         "id": "FaDVH5QxQUcy",
         "outputId": "2aff19a9-4d3d-4ee7-bf9f-8b7de18cbee7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -884,7 +885,7 @@
         "id": "c75rLwfA2ZFF",
         "outputId": "340e5589-4b20-4065-cf12-b9a5b2a83967"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
