--- a/ARI_CW2.ipynb
+++ b/ARI_CW2.ipynb
@@ -5,9 +5,10 @@
     "colab": {
       "name": "ARI_CW2.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "collapsed_sections": [],
       "mount_file_id": "10L43tpHcGdAKp0I-_d3Qz7Oxa8tHxvsK",
-      "authorship_tag": "ABX9TyOsXvboqKrg4VwPBaYT95XR",
+      "authorship_tag": "ABX9TyOc+kmgp/gGpkulhaACWGT0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +66,9 @@
           "height": 386
         },
         "id": "BgphSM0bO6TR",
-        "outputId": "9a5d9d9c-ab77-4ef8-efd2-02e884fd19b2"
+        "outputId": "12c4cac6-fb99-4e5c-dc29-f1635baabcc4"
       },
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a49cd8e9-ece9-43bf-ae2d-f164e563c688\">\n",
+              "  <div id=\"df-9a2093c0-370f-4c8d-a94c-fb5494000b11\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -280,7 +281,7 @@
               "</table>\n",
               "<p>5 rows × 23 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a49cd8e9-ece9-43bf-ae2d-f164e563c688')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a2093c0-370f-4c8d-a94c-fb5494000b11')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -331,12 +332,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a49cd8e9-ece9-43bf-ae2d-f164e563c688 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9a2093c0-370f-4c8d-a94c-fb5494000b11 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a49cd8e9-ece9-43bf-ae2d-f164e563c688');\n",
+              "          const element = document.querySelector('#df-9a2093c0-370f-4c8d-a94c-fb5494000b11');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -359,7 +360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 10
         }
       ]
     },
@@ -840,7 +841,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 890
+          "height": 1000
         },
         "id": "FaDVH5QxQUcy",
         "outputId": "89365ee1-a352-4afd-a258-d2a91da28a22"
@@ -882,7 +883,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
+          "height": 516
         },
         "id": "c75rLwfA2ZFF",
         "outputId": "97d6f7eb-ee75-44cf-c0ad-a74a475d3de0"
@@ -912,7 +913,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
+          "height": 516
         },
         "id": "MriD2FtKwjb7",
         "outputId": "0e98f3f7-e59f-4694-e679-723cb8c10924"
@@ -940,7 +941,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 693
+          "height": 694
         },
         "id": "dLr80scon33a",
         "outputId": "4ce402b3-7dd2-4609-9134-3a3d817e6ed2"
@@ -968,6 +969,26 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Pre-processing"
+      ],
+      "metadata": {
+        "id": "pMYZaXaBplQ2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fM9jdVHepocA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
