--- a/ARI_CW2.ipynb
+++ b/ARI_CW2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "10L43tpHcGdAKp0I-_d3Qz7Oxa8tHxvsK",
-      "authorship_tag": "ABX9TyNKp1UXHzelitJMnvGdmoOu",
+      "authorship_tag": "ABX9TyMN517VDdhiiCwEam7PdBzH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -941,7 +941,7 @@
         "id": "FaDVH5QxQUcy",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 731
         },
         "outputId": "47800dc8-686a-4a06-dd93-d9195936241d"
       },
@@ -980,7 +980,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
+          "height": 490
         },
         "id": "c75rLwfA2ZFF",
         "outputId": "e5b793ef-8b4d-4032-d55d-f8d1e491f2cb"
@@ -1010,7 +1010,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
+          "height": 511
         },
         "id": "MriD2FtKwjb7",
         "outputId": "bacd6886-c1ab-4b44-a931-0c6a2a3c1b00"
@@ -1038,7 +1038,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 695
+          "height": 602
         },
         "id": "dLr80scon33a",
         "outputId": "ff47e40c-ab08-4bc4-b41c-35826d2a69cd"
@@ -2244,7 +2244,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 647
         },
         "id": "diBQRAM92c7j",
         "outputId": "fcda0142-599c-4899-ae56-e420b57dc30c"
@@ -2277,13 +2277,24 @@
       "cell_type": "code",
       "source": [
         "scaler = StandardScaler()\n",
-        "knn22 = KNeighborsClassifier(n_neighbors=22)\n",
+        "knn22 = KNeighborsClassifier(n_neighbors=4)\n",
         "operations = [('scaler',scaler),('knn22',knn22)]\n"
       ],
       "metadata": {
         "id": "sD3H-CxlCEFk"
       },
-      "execution_count": 82,
+      "execution_count": 138,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.pipeline import Pipeline\n"
+      ],
+      "metadata": {
+        "id": "rmNu9HM5W0IS"
+      },
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -2296,7 +2307,7 @@
       "metadata": {
         "id": "BfubfYitCKTy"
       },
-      "execution_count": null,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -2305,10 +2316,25 @@
         "accuracy_score(y_test,pipe_pred)\n"
       ],
       "metadata": {
-        "id": "yLptcL-LCMwS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yLptcL-LCMwS",
+        "outputId": "54b7e1b2-ae42-4a16-ec3a-67d13de8622e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8335561497326203"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 142
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2316,10 +2342,57 @@
         "print(classification_report(y_test,pipe_pred))\n"
       ],
       "metadata": {
-        "id": "4mvCghD1CPsQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4mvCghD1CPsQ",
+        "outputId": "ed484d22-b7a0-4b4d-ba15-1bdb5d600bef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.81      0.93      0.87      1727\n",
+            "           1       0.88      0.71      0.78      1265\n",
+            "\n",
+            "    accuracy                           0.83      2992\n",
+            "   macro avg       0.84      0.82      0.82      2992\n",
+            "weighted avg       0.84      0.83      0.83      2992\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " confusion_matrix(y_test,pipe_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OU1MFoWeXO9H",
+        "outputId": "3f3d05f9-69a1-4482-8be0-d0a181225b85"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1600,  127],\n",
+              "       [ 371,  894]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
     }
   ]
 }
